@@ -1,3 +1,9 @@
+2008-08-20  David Smith  <dsmith@redhat.com>
+
+	* tapsets.cxx (utrace_derived_probe_group::emit_probe_decl):
+	Supports original and new utrace interfaces.
+	(utrace_derived_probe_group::emit_module_decls): Ditto.
+
 2008-08-20  Dave Brolley  <brolley@redhat.com>
 
 	* stap-client: Ignore SIGHUP and SIGPIPE.
